# mpc-security-scanner

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  NETWORK_PLUGIN_FEATURES.md  README.md  SECURITY.md  action.yml  cleanup_and_organize.sh  cleanup_repo.sh  docker-compose.yml  docker-scan.sh  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  test-docker-deployment.sh  test_all_features.sh  test_compliance_scanner.py  test_network_scan.py  test_plugins.py  test_reports.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: badges.yml  code-quality.yml  security.yml  tests.yml
docker/: .dockerignore  Dockerfile  Dockerfile.test-server
docs/: API.md  CHANGELOG.md  COMPLIANCE.md  COMPLIANCE_SUCCESS.md  RELEASE_v0.2.0.md  SECURITY.md  USAGE.md
examples/: vulnerable_server.py  vulnerable_server_http.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_main_py.html  z_6581f04e2e4ab75f___init___py.html  z_defad1a87623d8bf___init___py.html  z_defad1a87623d8bf_report_py.html  z_defad1a87623d8bf_server_py.html  z_defad1a87623d8bf_vulnerability_py.html  z_e05799d1961e1e02___init___py.html  z_e05799d1961e1e02_analyzer_py.html  z_e05799d1961e1e02_discovery_py.html  z_e05799d1961e1e02_reporter_py.html  z_f1b38b22aeb65474___init___py.html  z_f1b38b22aeb65474_config_py.html  z_f1b38b22aeb65474_logger_py.html  z_f1b38b22aeb65474_network_py.html
plugins/: example_headers_check.py
reports/: demo_scan.html  demo_scan.json
reports/demos/: compliance_demo.json  compliance_demo.md  test.docx  test.html  test.json
scripts/: create_github_release.sh  test_everything.sh  test_scanner.py  test_scanner_with_pdf.py  verify_compliance_implementation.sh
src/: interactive.py  main.py  main.py.backup
src/checks/: __init__.py  ai_specific.py  capability_exposure.py  confused_deputy.py  cors.py  debug_endpoints.py  error_disclosure.py  headers.py  injection.py  jwt_auth.py  ssrf.py  (+9 more)
(+37 files in other folders)
