[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-security-scanner"
version = "0.1.0"
description = "Security auditing tool for Model Context Protocol servers"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}
